[FEAT] Adding companion save location WIP

--- a/pages/companion/companion.html
+++ b/pages/companion/companion.html
@@ -14,6 +14,7 @@
 <body>
     <div id="companion" class="mode_div">
         <img src="../../Images/home.png" alt="home" id="home_img">
+        <img src="../../Images/home.png" alt="save" id="save_img">
         <h1>Companion</h1>
 
         <div class="block_info" id="companion_player_global_cartesian_coordinates">
